api-manager/v/2.x/rate-limiting-and-throttling-sla-based-policies.adoc
= 限制速度和限制 - 基于SLA的策略
：imagesdir：./_images

基于服务级别访问（SLA）的速率限制和限制策略是基于客户端ID的策略，它使用客户端ID作为参考，对每个应用在一段时间内可以请求的请求数量施加限制。要使用这些策略，至少要创建一个SLA层来定义请求限制，如本教程中所述。要求用户通过Exchange门户注册应用程序以吸引API用户。注册过程授予用户一个客户端ID和一个客户端密钥。

您可以配置SLA层以要求手动批准希望注册应用程序以调用API的用户的请求。

== 速率限制 - 基于SLA的策略

基于SLA的速率限制会根据SLA层的配置限制应用程序根据您的API请求的数量。默认情况下，您以名为client_id和client_secret的查询参数的形式提供客户端ID和令牌凭证。在Mule 4中，您可以选择仅在SLA策略中提供客户端ID。将此策略与联合策略（如OpenAM或PingFederate）相结合时，此功能尤其有用。

限速（不是基于SLA）限制API在特定时间段内从所有应用程序接受的请求数量。达到极限后，请求被拒绝。用户不需要注册应用程序或发送客户端ID。

您可以更改指向凭证的Mule表达式，并从HTTP消息的其他地方获取这些值。

== 节流 - 基于SLA的策略

基于SLA的节流与基于SLA的速率限制非常相似，但不会拒绝超出SLA限制的请求，而是排队等待稍后再处理。这些请求会根据配置定期重试，直到它们被接受或拒绝为止，因为它们被重试了最长时间。

您可以配置不接受请求的尝试间隔时间，并且可以限制尝试的次数。

== 基于SLA的应用程序注册

如果您为API创建至少一个SLA层，请求从新应用程序访问的用户必须选择SLA层。您可以根据不同的费率限制和限制提供多个SLA层选择。

== 管理API访问请求

如果选定的SLA层设置为自动，则API Manager会立即批准所有API访问请求，并且用户可以立即向API发送已认证的请求。如果选择的SLA层配置了手动批准，则组织的管理员必须先批准它，然后用户才能开始向您的API发送有效请求。

要批准API访问请求，请转到API版本页面，然后选择应用程序。

image:approve+applications.png[批准+应用]

您可以查看有关您的待处理和处理请求的详细信息并对其进行管理。

== 创建SLA层或分层SLA

首先，创建一个SLA层。如果您选择手动批准，则任何应用程序访问请求都必须由组织中的管理员手动批准。

在以下条件下支持多个SLA限制：

*  API管理器管理API
*  API网关运行时2.1或更高版本管理API

如果在2.1版以上的API网关运行时上运行的API使用具有多个限制的SLA层，则只会执行第一个定义的限制。

您可以为单个SLA层指定多个吞吐量限制。

. 在添加SLA层对话框的限制中，设置第一组限制。
. 点击加号图标，然后设置下一组限制。
+
例如：
+
[%header,cols="3*",width=50%]
|===
|需求数量 |时间段 |时间单位
| `100`  | 1  |二
| `10000`  | 1  |天
|===
+
. 点击添加。

例如，名为Gold的SLA层被设置为将请求限制为每秒100个请求，并且每天限制10,000个请求。这可确保注册在Gold层上的应用程序不会超过每秒100个请求的突发限制。避免流量瓶颈，同时确保注册的应用每天获得10,000个请求的广告SLA。

如果取消选中可见标志，则在注册时不会向应用程序开发人员公开第一个100个请求的限制。只配置一个限制时，该限制必须可见。

=== 响应标题

请求响应中包含三个标题，告知用户有关SLA限制的信息，并在接近阈值时通知他们。当SLA执行限制请求吞吐量的多个策略时，与最严格的策略相关的一组标题提供了此信息。

例如，您的API的用户可能会收到包含这些标头的响应：
----
X-RateLimit-Limit: 20
X-RateLimit-Remaining: 14
X-RateLimit-Reset: 19100
----
在接下来的19100毫秒内，SLA允许只有14个请求被允许，在这个时间窗口内允许有20个请求。

== 在Mule群集中限制和限制速率

群集中速率限制和限制的指导原则适用于基于SLA的策略的速率限制和限制。

== 另请参阅

*  link:/api-manager/v/2.x/rate-limiting-and-throttling#rate-limiting-and-throttling-in-a-mule-cluster[群集中的速率限制和限制指南]
*  link:/api-manager/v/2.x/client-id-based-policies[基于客户端ID的策略]
*  link:/api-manager/v/2.x/tutorial-manage-an-api[应用策略和SLA层]
*  link:/api-manager/v/2.x/tutorial-manage-an-api#adding-an-sla-tier[创建一个SLA层]
